# mlops_project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: cml_data.yaml  codecheck.yaml  tests.yaml
data/processed/: test_target.pt  train_target.pt
dockerfiles/: evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth  model_1_epoch.pth  model_2_epochs.pth
notebooks/: quick_tests.ipynb
src/mlops/: data.py  dataset_statistics.py  evaluate.py  model.py  train.py  utils.py  visualize.py
tests/: test_api.py  test_data.py  test_model.py  test_training.py
